Align navbar center with flex justify-content and removie fixed width

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -11,7 +11,8 @@ nav {
   height: 80px;
   margin: auto;
   padding: 0;
-  width: 1040px;
+  justify-content: center;
+  /* width: 1040px; */
 }
 
 li {
